# ProgrammingLab

./: .gitignore
BASH_colorLog/: my_auto.sh
BASH_scriptParams/: script_with_params.sh
C_Makefile/: README
C_Makefile/Makefile_with_prints/: Makefile  README  main.c
C_Makefile/make_distcheck/: Makefile.am  Makefile.in  configure  configure.ac
C_Makefile/make_distcheck_with_external_deps/subprogram/helloworld-0.1/: Makefile.am  configure  configure.ac  main.c
C_Makefile/make_distcheck_with_external_deps/subprogram/helloworld-0.1/_build/: Makefile  config.status
C_Makefile/simple_Makefile/: Makefile  main.c
C_bitmask/: README  bitmask  bitmask.c
C_enum/enum_usage/: defenum.h  main.c
C_errors/argument type that has a default promotion/: README  char_arg.c  struct_arg  struct_arg.c
C_errors/expected '=', ',', ';', 'asm' or '__attribute__' before/: README
C_errors/multiple definintion of/: Makefile  README  count.c  main.c  print.c
C_increment/: main  main.c
C_kernel/: dpdk.txt  ex01_simple_module.c  ex02_simple_module_init.c  ex03_simple_module_exit.c  ex04_simple_module.c  ex05_exporting_symbols.c  ex05_using_symbols.c  ex06_module_param.c  ex07_simple_char_drv.c
C_macro/: main  main.c  print.h
C_pointer/const_pointer_const/: const_pointer_const  (+1 more)
autoconf_automake/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac
autoconf_automake/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
autoconf_automake/doc/: README
autoconf_automake/man/: Makefile  Makefile.am  Makefile.in
autoconf_automake/scripts/: Makefile  Makefile.am  Makefile.in  echo.sh
autoconf_automake/src/: Makefile  Makefile.am  Makefile.in  main  main.c  print.c
autoconf_automake/src/.deps/: main.Po  print.Po
(+50 files in other folders)
