#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT(krynieski, 0.1, krynieski@krynieski)
AM_INIT_AUTOMAKE(krynieski, 0.1)
AC_OUTPUT(Makefile src/Makefile man/Makefile scripts/Makefile)
AC_CONFIG_SRCDIR(src/main.c)
AC_CONFIG_HEADERS()

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT
